fix: icon not visible + operlapping hd link with description

--- a/Video/style.css
+++ b/Video/style.css
@@ -16,6 +16,7 @@ body{
     background-color: var(--bluegray900);
     font-family: 'Montserrat', sans-serif;
     color: var(--bluegray300);
+    margin: 0px;
 }
 .flex-container{
     display:flex;
@@ -23,7 +24,7 @@ body{
     max-width:1450px;
     background-color: var(--bluegray900);
     margin: auto;
-    
+  
 
 }
 .flex-container > div{
@@ -46,11 +47,13 @@ body{
 }
 
 .desc{
+    display: block;
     overflow:auto;
     max-height:155px;
     min-height: 154px;
     padding-left: 0.5rem;
     margin-top:15px ;
+    margin-bottom: 5px;
 }
 .Link{
     text-decoration: none;
@@ -62,6 +65,7 @@ body{
     margin-left:0.5rem;
     padding:3px;
     border-radius: 0.5rem;
+    margin-top: 5px;
 }
 
 #textarea{
@@ -95,4 +99,24 @@ header{
 .title{
 font-weight: 600;
 font-size: 20px;
+}
+.navigation{
+    background-color: var(--block);
+    height:50px;
+    color:var(--bluegray200);
+
+   
+}
+.icon{
+ position: relative;
+ top:13px;
+ font-size: 25px;
+}
+.icon-img img{
+   
+    width:66px;
+    height:40px;
+    position:absolute;
+    top:15px;
+    
 }
